# pinmok

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  manage.py  pyproject.toml  requirements.txt  sync-to-gitee.yml
.github/workflows/: publish.yml  sync-to-gitee.yml
cmfadmin/: __init__.py  admin.py  apps.py  backends.py  constants.py  context_processors.py  enums.py  forms.py  menus.py  models.py  options.py  sites.py  urls.py  views.py
cmfadmin/libs/: __init__.py  console.py  sprite.py  tree.py  upload.py
cmfadmin/migrations/: 0001_initial.py  0002_remove_menu_update_time_menu_update_at_config.py
cmfadmin/service/: __init__.py  authorization.py  breadcrumb.py  config.py  email.py  menu.py  navigation.py  upload.py
cmfadmin/templates/: 400.html  403.html  404.html  500.html
cmfadmin/templates/admin/: actions.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_selected_confirmation.html  filter.html  index.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html
cmfadmin/templates/component/: cropper.html  dialog.html  permission.html  toast.html
cmfadmin/templates/config/: config_base.html  email_settings.html  files.html  navigation.html  navitem_form.html  site_info.html  sprite_add.html  sprite_manager.html  sync_menu.html  system_setting.html  upload_setting.html
cmfadmin/templates/registration/: password_change_done.html  password_change_form.html
cmfadmin/templatetags/: __init__.py  icons.py  media.py
cmfadmin/utils/: __init__.py  helper.py  po_dedupe.py  po_tool.py  tools.py
djangocmf/: __init__.py  asgi.py  cmf_settings.py  settings.py  urls.py  wsgi.py
djangocmf/cmfadmin/: __init__.py  admin.py  apps.py  backends.py  config_schema.py  constants.py  context_processors.py  datasource.py  decorators.py  enums.py  fields.py  forms.py  menus.py  models.py  options.py  signals.py  sites.py  urls.py  views.py  widgets.py
djangocmf/cmfadmin/forms/: __init__.py  config_forms.py  forms.py
djangocmf/cmfadmin/libs/: __init__.py  upload.py
djangocmf/cmfadmin/migrations/: 0001_initial.py  0003_delete_menupermission_emailconfig_and_more.py  0004_delete_emailtemplateconfig_alter_config_options_and_more.py  0006_alter_menu_permissions.py  0007_icon.py  0010_resource_file_type_resource_mime_type_and_more.py  0018_slider.py  (+7 more)
djangocmf/core/: __init__.py  api.py  constants.py  decorators.py  menu.py  mixins.py  permission.py  signals.py  sites.py  translatable.py
documentation/: mkdocs.yml
documentation/docs/: appendix.en.md  appendix.zh.md  concepts.en.md  concepts.zh.md  getting-started.en.md  getting-started.zh.md  i18n.en.md  i18n.zh.md  index.en.md  index.zh.md  menus.en.md  menus.zh.md  model_admin.en.md  model_admin.zh.md  tags.en.md  tags.zh.md  theme.en.md  theme.zh.md  utils.en.md  utils.zh.md
pinmok/cmfadmin/: __init__.py  admin.py  apps.py  backends.py  config_schema.py  datasource.py  decorators.py  fields.py  menus.py  models.py  options.py  signals.py  urls.py  views.py  widgets.py
pinmok/core/: __init__.py  admin.py  decorators.py  menu.py  mixins.py  permission.py  sites.py  translatable.py
pinmok/padmin/: __init__.py  admin.py  apps.py  backends.py  config_schema.py  constants.py  datasource.py  decorators.py  enums.py  fields.py  menus.py  models.py  options.py  signals.py  urls.py  views.py  widgets.py
project_settings/: settings.py  urls.py
(+332 files in other folders)
