[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pinmok"
version = "1.0.0"
description = "A lightweight and flexible content management framework designed for fast and effortless backend development."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "惠达浪", email = "crazys@126.com" }]
requires-python = ">=3.11"
dependencies = ["Django>=5.0", "Pillow>=10.1.0", "filetype>=1.2.0"]
keywords = ['django', 'Pinmok', 'admin']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]

[project.urls]
Source = "https://github.com/pinmok/pinmok"

[tool.setuptools]
packages = ["pinmok", "pinmok.core", "pinmok.cmfadmin"]
